--- a/Template.Web/Features/Login/Login.cshtml
+++ b/Template.Web/Features/Login/Login.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Login";
 }
 <div class="container">
+    <head>
+        <link rel="stylesheet" href="/css/LoginStyle.css" />
+    </head>
     <form method="post" role="form" autocomplete="off">
         <input asp-for="ReturnUrl" type="hidden" />
 
