--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -13,7 +13,7 @@
     <div class="tabs">
         <button class="btn btn-primary">Team</button>
         <button class="btn btn-primary">Richieste</button>
-        <button class="btn btn-primary" onclick="location.href='@Url.Action("History", "Home")'">Storico</button>
+        <button class="btn btn-primary" onclick="location.href='@Url.Action("History", "History")'">Storico</button>
     </div>
 
     <div class="date-selectors mb-4">
