--- a/Template.Web/wwwroot/css/HomeStyle.css
+++ b/Template.Web/wwwroot/css/HomeStyle.css
@@ -88,6 +88,12 @@ h1 {
         transition: background-color 0.3s ease;
     }
 
+        /* Modifica per i giorni fuori dal mese corrente */
+        .table td.not-current-month {
+            background-color: #E4E5E0; /* Colore di sfondo più chiaro */
+            color: #b0b0b0; /* Colore del testo più chiaro */
+        }
+
         .table td .day-header {
             font-size: 1rem;
             font-weight: bold;
