--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -11,6 +11,7 @@
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1 class="title-center">@ViewData["Title"]</h1>
+        <img src="~/@Model.UserProfileImage" alt="Profilo" class="profile-img" />
     </div>
 
     <div class="tabs">
