--- a/Template.Web/wwwroot/css/HomeStyle.css
+++ b/Template.Web/wwwroot/css/HomeStyle.css
@@ -27,6 +27,13 @@ h1 {
     gap: 1rem;
 }
 
+    .profile-img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%; /* Bordo tondo */
+        object-fit: cover; /* Adatta l'immagine senza distorsioni */
+    }
+
 /* Selettori di data */
 .date-selectors {
     display: flex;
