add Request page

--- a/Template.Web/Views/Shared/_Layout.cshtml
+++ b/Template.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
                     <img class="onit-suites-logo" src="~/images/app-logo.png" />
+                    <p>cchuacsoah</p>
+                    <p>cchuacsoah</p>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
