calendar aesthetics and added from to field (previously removed by mistake)

--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -29,6 +29,14 @@
         <button class="btn btn-primary" onclick="location.href='@Url.Action("History", "History")'">Storico</button>
     </div>
 
+    <!-- Dal - Al Date Selectors -->
+    <div class="date-selectors mb-4">
+        <label for="dateFrom">Dal:</label>
+        <input type="date" id="dateFrom" class="form-control" />
+        <label for="dateTo" class="ms-3">Al:</label>
+        <input type="date" id="dateTo" class="form-control" />
+    </div>
+
     <div class="calendar text-center mt-4">
         <div class="month-navigation">
             <h2 class="month-title">
