--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -64,32 +64,27 @@
                     <tr>
                         @foreach (var day in week)
                         {
-                            if (day.IsCurrentMonth)
-                            {
-                                <td>
-                                    <div class="day-header d-flex justify-content-between align-items-start">
-                                        <span>@day.Date.Day</span>
-                                        <button class="btn btn-sm add-event-button" onclick="toggleEventMenu(this)">+</button>
-                                    </div>
-                                    <div class="events mt-2">
-                                        @foreach (var eventItem in day.Events)
-                                        {
-                                            <div>@eventItem</div>
-                                        }
-                                    </div>
-                                    <div class="event-menu" style="display: none;">
-                                        <select class="form-select">
-                                            <option value="smartworking">Smartworking</option>
-                                            <option value="permessi">Permessi</option>
-                                        </select>
-                                        <button class="btn btn-primary mt-1">Aggiungi</button>
-                                    </div>
-                                </td>
-                            }
-                            else
-                            {
-                                <td></td>
-                            }
+                            <td class="@(day.IsToday ? "today" : "") @(day.IsCurrentMonth ? "" : "other-month-day")">
+                                <div class="day-header d-flex justify-content-between align-items-start">
+                                    <span>@day.Date.Day</span>
+                                    <button class="btn btn-sm add-event-button" onclick="toggleEventMenu(this)">
+                                        +
+                                    </button>
+                                </div>
+                                <div class="events mt-2">
+                                    @foreach (var eventItem in day.Events)
+                                    {
+                                        <div>@eventItem</div>
+                                    }
+                                </div>
+                                <div class="event-menu" style="display: none;">
+                                    <select class="form-select">
+                                        <option value="smartworking">Smartworking</option>
+                                        <option value="permessi">Permessi</option>
+                                    </select>
+                                    <button class="btn btn-primary mt-1">Aggiungi</button>
+                                </div>
+                            </td>
                         }
                     </tr>
                 }
